src/test/deca/codegen/invalid/null_return.deca

class A {
    A get(){ 
        return null; 
    }
    int meth(){ 
        return 1; 
    }
}

{
    A a;
    a = new A();
    println(a.get().meth());
}
